# matrix-multiplication-on-crack

./: .gitignore  CMakeLists.txt  README.md
include/kernels/: CoalescedKernel.h  NaiveKernel.h  SharedMemCachingKernel.h  Tiling1DKernel.h  UncoalescedKernel.h
include/matrix/: Matrix.h  MatrixInitializer.h
include/utils/: Colors.h  CpuMatMul.h  CudaTimer.h  CudaUtils.h  TestUtils.h
src/: main.cpp  test.cpp
src/kernels/: CoalescedKernel.cu  NaiveKernel.cu  SharedMemCachingKernel.cu  Tiling1DKernel.cu  UncoalescedKernel.cu
